Change CAS output type to be an enum
