# server/lib/tuist_web/controllers/api/runs_controller.ex
@@ -504,7 +504,8 @@ defmodule TuistWeb.API.RunsController do
                      },
                      type: %Schema{
                        type: :string,
-                       description: "The type of the CAS output."
+                       description: "The type of the CAS output file.",
+                       enum: [:swift, :sil, :sib, :image, :dSYM, :dependencies, :"emit-module-dependencies", :autolink, :swiftmodule, :swiftdoc, :swiftinterface, :object, :"ast-dump", :"raw-sil", :"raw-sib", :"raw-llvm-ir", :"llvm-ir", :"llvm-bc", :"private-swiftinterface", :"package-swiftinterface", :"objc-header", :"swift-dependencies", :"dependency-scanner-cache", :"json-dependencies", :"json-target-info", :"json-supported-features", :"json-module-artifacts", :"imported-modules", :"module-trace", :"index-data", :"index-unit-output-path", :"yaml-opt-record", :"bitstream-opt-record", :diagnostics, :"emit-module-diagnostics", :"dependency-scan-diagnostics", :"api-baseline-json", :"abi-baseline-json", :"const-values", :"api-descriptor-json", :"swift-module-summary", :"module-semantic-info", :"cached-diagnostics", :"json-supported-swift-features", :modulemap, :pch, :pcm, :tbd, :remap, :"localization-strings", :"clang-header"]
                      }
                    },
                    required: [:node_id, :checksum, :size, :duration, :compressed_size, :operation]
